deploy/yamls-parameterized/kustomize/base/repofortestingm2k-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: repofortestingm2k
    name: repofortestingm2k
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: repofortestingm2k
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: repofortestingm2k
            name: repofortestingm2k
        spec:
            containers:
                - image: quay.io/1/repofortestingm2k:latest
                  imagePullPolicy: Always
                  name: repofortestingm2k
                  ports:
                    - containerPort: 8080
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
