deploy/yamls-parameterized/kustomize/base/asd-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: asd
    name: asd
spec:
    rules:
        - host: asd.com
          http:
            paths:
                - backend:
                    service:
                        name: repofortestingm2k
                        port:
                            name: port-8080
                  path: /repofortestingm2k
                  pathType: Prefix
status:
    loadBalancer: {}

...
