deploy/yamls-parameterized/kustomize/base/asdasd-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: asdasd
    name: asdasd
spec:
    rules:
        - host: asdasd.com
          http:
            paths:
                - backend:
                    service:
                        name: repofortestingm2k
                        port:
                            name: port-8080
                  path: /repofortestingm2k
                  pathType: Prefix
status:
    loadBalancer: {}

...
